--- a/style.css
+++ b/style.css
@@ -303,3 +303,32 @@ h1 {
     font-size: small;
     font-style: italic;
 }
+
+.inventory_img {
+    max-width: 200px;
+    margin:0 auto;
+}
+
+.inventory_img:hover {
+    transform: scale(1.03);
+    transition: transform 0.3s ease-in-out;
+    cursor: pointer;
+}
+
+.close-button {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    font-size: 24px;
+    color: black;
+    cursor: pointer;
+    background:white;
+    font-size: 20px;
+    padding:5px;
+    font-weight: bold;
+    width: 20px;
+    text-align: center;
+    border-radius: 5%;
+    border: 1px solid black;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
