--- a/style.css
+++ b/style.css
@@ -13,6 +13,10 @@ body {
     font-family: 'Cinzel', serif;
     padding: 20px;
     min-height: 100vh;
+    background-image: url('../assets/images/background2.png');
+    background-size: cover;
+    background-attachment: fixed;
+    background-position: center;
 }
 
 .color-red {
